# yolov12_detect

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
yolov12_detect/: yolo_best_frame_node.py
